# legal_instruments

./: .gitignore  Makefile  README.md  pyproject.toml
legal_instruments/: extract.py  legal_instruments.py  pipeline.py  tasks.py
tests/: legal_instruments_test.py
